deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejsdemo
spec:
  selector:
    matchLabels:
      name: nodejsdemo
  template:
    metadata:
      labels:
        name: nodejsdemo
    spec:
      containers:
        - name: app
          image: ajayvamsi/nodejsdemo:latest
          ports:
            - containerPort: 8080
